SMall spacing fixes

--- a/app/assets/styles/all-vars.scss
+++ b/app/assets/styles/all-vars.scss
@@ -233,6 +233,7 @@ $font-blocky: "degular-variable", sans-serif;
 
 @mixin body-formatting{
 	p:not([class]), li:not([class]){
+		margin-bottom: 2rem;
 		@extend %text-body;
 		a{
 			@extend %text-body-link;
